<resources>
    <string name="app_name">Lanckorona walk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_first_line">Lanckorona</string>
    <string name="title_second_line">walk</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>
    <string name="menu_title">Menu</string>
    <string name="history_title1">Title 1</string>
    <string name="history_content1">Józef Lorenz – ur. w 1872 roku w Potyliczu koło Lwowa, kształcił się na kursach pszczelarstwa we Lwowie i w Wiedniu. Na wystawie ogrodniczo-pszczelarskiej we Lwowie w 1899 otrzymał srebrny medal jako najmłodszy wystawca. Księżna M. Lubomirska oddała mu pod opiekę swoją pasiekę. Jego przyjazd do Lanckorony był zapowiedzią nowych i lepszych czasów dla miasta. Objął kierownictwo Kursu Sadowniczo-Pszczelarskiego w Lanckoronie. W tutejszej szkole, był zaangażowanym pedagogiem realizującym założenia „pracy u podstaw” - przeciwdziałał analfabetyzmowi i dbał o edukację na wsi. Był społecznikiem i działaczem. Do Lanckorony sprowadził także swoją żonę Wandę oraz synów: Tadeusza i Zdzisława.</string>
    <string name="history_content2">Lorenz zauważył, że jedynym ratunkiem dla upadającej wsi jest zwrócenie się ku ziemi i jej płodom. Rozpoczął działalność sadowniczą, a potem pszczelarską. Sam uprawiał sad najpierw przy szkole, potem zakładał kolejne i uczył tej sztuki okolicznych mieszkańców. Sady, ogrody zaczęły pojawiać się przy większości domostw i zmieniły krajobraz miasta. Lorenz sprowadzał do wsi rzadkie rośliny, czasem będące jedynymi okazami w Polsce (m.in. klon japoński złotolistny, choina kanadyjska). Uważał też, że zbocza Góry Lanckorońskiej są doskonałym miejscem do uprawy winorośli.  Na temat bartnictwa Lorenz napisał wiele prac naukowych, w tym książkę „Wzorowa pasieka. Podręcznik dla pszczelarzy”. Był autorem licznych artykułów o pszczelarstwie i redaktorem czasopisma „Pszczelarz”. Uczestniczył w Zjazdach Pszczelarzy, prowadził kursy pszczelarstwa w szkole gospodarczej dla kobiet oraz na Uniwersytecie Jagiellońskim. Budował pasieki według amerykańskiej metody Dadant-Blatt’a. Wprowadzał do hodowli innowacyjne rozwiązania.\n\nZa działalność na polu pszczelarstwa otrzymał Wielki Medal Srebrny Ministerstwa Rolnictwa. Powołał też Towarzystwo Upiększania Lanckorony. Dzięki jego działalności w 1919 roku doszło do podpisania „Memoriału do Wysokiego Sejmu w Warszawie”, w którym domagano się utworzenia w Lanckoronie letniska i schroniska dla sierot wojennych. Lorenz był jednym z sygnotariuszy dokumentu.\n\nDo Lorenzów zjeżdżali się znajomi z rodzinami. Józef postanowił wtedy rozbudować swój dom i stworzyć pokoje gościnne w „Willi Zamek” (1921), co było legendarnym początkiem ruchu pensjonatowego w Lanckoronie. Jego żona założyła w willi pierwszą w okolicy garkuchnię dla letników. Wkrótce jedna willa nie wystarczyła i powstała następna - rozbudowana leśniczówka, czyli „Tadeusz” (1925).\n\nJózef Lorenz był literatem, jego pseudonim artystyczny to „Józef z Lanckorony”. Pisał dramaty: np. „Na ruinach”, 1905. Jeden z nich – „Zmartwychwstanie” – miał być wystawiany w Teatrze Słowackiego w Krakowie, przygotowania do premiery przerwał wybuch II wojny światowej. Był autorem wielu wierszy.\n\nPrzyczynił się także do wykupienia lasów na Górze Lanckorońskiej dla mieszkańców Lanckorony, by lanckorońskie dobra mogły być w rękach swoich prawdziwych właścicieli, a nie obcych. Józef Lorenz przeprowadził się pod koniec życia do Leśnicy. Zmarł w wyniku choroby w latach czterdziestych. Pochowany jest na cmentarzu w Zakrzowie.\n\n Źródła:\nK. Wiśniak, Powietrznicy w Lanckoronie, Kraków 2008\nK. Wiśniak, Wśród ludzi i zwierząt Lanckorony, Kraków 2003\nArchiwum „Kuriera Lanckorońskiego” (r. 2002, 2013)\nHasło: Józef Lorenz, w: „Pszczelarstw polskie. Organ naczelnego związku organizacyj pszczelniczych” nr 8, r. 1929.\nWywiady z Tatianą Bodnar, Robertem Bodnarem i Alicją Lorenz-Łomnicką.\n</string>
    <string name="history_title2">Title 2</string>
    <string name="nav_title">If you\'re not in Lanckorona\\nwe can navigate you there</string>
    <string name="nav_button">NAVIGATION</string>
    <string name="gps_dialog_title">Turn on GPS</string>
    <string name="gps_dialog_content">In order to use this function you have to turn on the GPS</string>
    <string name="gps_dialog_button">SETTINGS</string>
    <string name="place1_description">Nasz spacer po Lanckoronie zaczyna się w miejscu symbolicznym. Wszystko tu ma znaczenie. Na jednej ze ścian możesz zobaczyć mural – artystyczne dzieło poświęcone bohaterowi naszej wycieczki po Lanckoronie. Czy domyślasz się, dlaczego kwiaty, pszczoła, intensywne kolory? Cofnijmy się do początku XX wieku. Jesteśmy w czasach, kiedy Polski nie było na mapie. Lanckorona należała wtedy do Austrii i wchodziła w skład Galicji Zachodniej. Była pięknym, malowniczym miejscem ukrytym wśród pagórków i lasów. Do Lanckorony przybył wtedy spod Lwowa młody, inteligentny człowiek. Był to pszczelarz z wykształcenia, którego pasją były pszczoły, jego misją były pszczoły. Pszczoły były też jego sposobem na życie. Urodzony w Samborze koło Lwowa Józef Lorenz był już w tak młodym wieku pszczelarzem wybitnym – nagradzanym wystawcą, opiekunem pasieki Księżnej M. Lubomirskiej. Miał przed sobą świetlaną przyszłość. Dostał propozycję objęcia szkoły w Lanckoronie, co związane było z awansem. Spakował się szybko i ruszył w podróż z Lwowa do Krakowa i do Lanckorony.\n\nRozejrzyj się a potem zamknij oczy. Tych domów, ulic, elektryczności – tego wtedy w Lanckoronie nie było. Oczom Józefa ukazała się mała, skromna wieś. Azyl pod Górą Lanckorońską, tryskające źródła, szumiące lasy, ruiny zamku, łąki, odbudowująca się po pożarze wieś... Dostrzegając i doceniając potencjał miejsca – postanowił tu zostać. A skoro zostać na całe życie, to tylko ze swoją rodziną. Zabrał swoją zaradną żonę Wandę i dwóch synów – kilkuletniego Tadzia i młodszego Zdzisia. Wkrótce potem wykupił kawał ziemi pod lasem i wybudował stylizowany na zabudowę zakopiańską dom. Ich miejsce spokoju. Sam pracował w szkole przeciwdziałając analfabetyzmowi. Nie pozostawał obojętny na drugiego człowieka – starał się nauczać, radzić, pomagać mieszkańcom. Założył w Lanckoronie nie jedną pasiekę i nie jeden sad. W przeciągu kilku lat Lanckorona ubarwiła się, rozkwitła, rozbudowała się. Budziła się ze snu. Józef trafił tu na chętnych do pracy i działania ludzi. Można powiedzieć, że pełnił rolę ich przewodnika. I postarał się pokazać to miejsce światu.\n\nMural, który oglądasz stworzyła artystka i rzeźbiarka: Małgorzata Mirga-Tas wraz z dziećmi z gminy Lanckorona. Nawiązuje tematycznie do zainteresowań Józefa: sadownictwa, ogrodnictwa i pszczelarstwa, ale też wskazuje na jego chęć upiększania otoczenia i troski o wspólne dobro. Podkreśla potencjał i potrzebę zmiany rzeczywistości. Malując kolorowy mural dzieci mogły wyrazić swoją własną potrzebę zmiany otoczenia – miejsca najbliższego im w gminie: Gminnego Ośrodka Kultury. W ślad Lorenza nie poszły tylko dzieci. Dużo wcześniej zrobili to jego potomkowie i rodzina...\n\n</string>
    <string name="place2_description">Tadeusz – starszy syn Józefa był walecznym legionistą. Miał słabość do pięknych i wygimnastykowanych kobiet. Jego serce skradła „Panna z dworu” - Jadwiga z Dziewońskich. Kiedy zobaczył ją w teatrze podczas tańca – zakochał się na zabój i porwał ją do Lanckorony. Młode małżeństwo wprowadziło się najpierw do Zamku, do ojca. Trzeba było pomyśleć jednak o własnym gniazdku. Józef Lorenz postanowił więc oddać synowi część ziemi i drewnianą leśniczówkę. W prezencie ślubnym pracodawca Tadeusza, senator i generał Hammerling oddał młodym także część swoich ziem. I tak drewniana chatka na wyrobisku kamieniołomu szybko zmieniła się w piękny dom, stylizowany na styl zakopiański. Był oczywiście mniejszy niż ten, który widzimy dzisiaj. Wystarczył jednak dla Tadeusza, Jadwigi, ich rodziny i przyjaciół. Dom zbudowany w latach dwudziestych, w 1924 roku stał się pensjonatem gotowym na przyjmowanie gości. Otoczony pięknym ogrodem ze stuletnimi drzewami sadzonymi przez ojca Tadeusza – Józefa Lorenza, ze studnią ograbioną w czasie wojny, ubogacony został murowanym basenem ku uciesze letników.</string>
    <string name="place3_description">Jeżeli sądzisz, że ściana skalna, pozostałość po kamieniołomie szpeci widok z okien – nie wiesz jak bardzo się mylisz. W pensjonacie powtarzana jest historia o wyjątkowych właściwościach kamienia. Ludzie przyjeżdżali medytować w to miejsce z końca świata! Letnicy także podkreślają, że to tu odnajdują spokój wewnętrzny, harmonizują i wyrównują sobie rytm życia. Stają się szczęśliwsi? Mają więcej siły i energii wewnętrznej? To miejsce idealne na tak zwane „ładowanie akumulatorów”, odpoczynek. Pozytywne fluidy płyną właśnie ze starego kamieniołomu. Dowodzono nawet istnienia czegoś nienamacalnego: czakramu. Właściciele pensjonatu chętnie dzielą się legendą, że Kraków ma swój czakram na Wawelu, a Lanckorona tu, przy Willi Tadeusz. Czy odkryjesz który to kamień? \n\nTeraz, naładowany pozytywną energią z lokalnego źródła mocy, możesz pójść dalej. Cofnijmy się do początku historii letniska w Lanckoronie. </string>
    <string name="card_interesting_place_button">MORE</string>
    <string name="walk_title">To start the walk, go to Gminny Ośrodek Kultury in Lanckorona</string>
    <string name="next_place_dialog_title">Next place</string>
    <string name="next_place_dialog_button">SHOW MAP</string>
    <string name="out_of_map">You\'re out of map ;)</string>
    <string name="no_gps_signal">There is no GPS signal ;(</string>
    <string name="place1_name">Mural</string>
    <string name="place2_name">Tadeusz Villa</string>
    <string name="place4_name">Castle Villa garden</string>
    <string name="place5_name">Castle Villa</string>
    <string name="place3_name">Quarry</string>
    <string name="place6_name">Fable Villa</string>
    <string name="place7_name">Castle debris</string>
    <string name="place4_description">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus.</string>
    <string name="end_walk_dialog_title">This is the end ;(</string>
    <string name="end_walk_content">If you like homemade honey, we encourage you to visit our local beekeper. It\'s only 10 mins away ;)</string>
    <string name="end_walk_dialog_button">NAVIGATION</string>
</resources>