<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        app:typeface="roboto_thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/gps_dialog_title"
        android:textColor="#66000000"
        android:textSize="@dimen/title" />

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        app:typeface="roboto_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/gps_dialog_content"
        android:textColor="#D7000000"
        android:textSize="@dimen/content" />

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        android:id="@+id/gps_dialog_button"
        app:typeface="roboto_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:gravity="center"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/gps_dialog_button"
        android:textColor="#3f51b5"
        android:textSize="@dimen/button" />

</LinearLayout>