<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/primaryDarker"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/end_walk_dialog_title"
        android:textColor="#C7FFFFFF"
        android:textSize="@dimen/title"
        app:typeface="roboto_medium" />

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/end_walk_content"
        android:textColor="#D7000000"
        android:textSize="@dimen/content"
        app:typeface="roboto_thin" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/beekeeper" />

    <com.fleenmobile.spacerpolanckoronie.fonts.RobotoTextView
        android:id="@+id/end_walk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:gravity="center"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/end_walk_dialog_button"
        android:textColor="#3f51b5"
        android:textSize="@dimen/button"
        app:typeface="roboto_medium" />


</LinearLayout>